# hs-pong

./: README.md  hs-pong.cabal
app/: Main.hs
app/Pong/: Components.hs  Entities.hs  Sounds.hs  Systems.hs  Types.hs
app/Pong/Systems/: ClickHandling.hs  CollisionDetection.hs  Drawing.hs  Hover.hs  Initialize.hs  Movement.hs  Particles.hs  Sound.hs  State.hs  UserInput.hs
app/Pong/Systems/State/: GameOver.hs  Playing.hs  StartScreen.hs
